# libcrc

./: CMakeLists.txt  README.md
src/: crc16.c  crc32.c
